# exit-python

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/cellar_door_exit/: __init__.py  convenience.py  countersign.py  crypto.py  errors.py  marker.py  models.py  proof.py  serialization.py  signer.py  validate.py
src/exit_door/: __init__.py  convenience.py  countersign.py  crypto.py  errors.py  marker.py  models.py  proof.py  serialization.py  signer.py  validate.py
tests/: test-vectors.json  test_convenience.py  test_countersign.py  test_cross_language.py  test_crypto.py  test_marker.py  test_models.py  test_proof.py  test_serialization.py  test_signer.py
