[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellar-door-exit"
version = "0.1.0"
description = "EXIT Protocol SDK — create, sign, and verify ExitMarkers for AI agent departure records"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Cellar Door", email = "hawthornhollows@gmail.com" },
]
keywords = [
    "exit-protocol",
    "ai-agents",
    "departure-records",
    "digital-signatures",
    "ed25519",
    "verifiable-credentials",
    "did-key",
    "cryptography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=43.0",
    "pydantic>=2.5",
    "rfc8785>=0.1.2",
    "base58>=2.1",
]

[project.urls]
Homepage = "https://cellar-door.dev"
Documentation = "https://cellar-door.dev/agent"
Repository = "https://github.com/CellarDoorExits/exit-python"
Issues = "https://github.com/CellarDoorExits/exit-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cellar_door_exit"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["cellar_door_exit"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
